# Athar-Image-Designer

./: .env  .env.template  BUG_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  EXECUTION_SUMMARY.md  EXECUTOR_REPORT.md  ISSUE_DIAGNOSIS_AND_FIX.md  PROJECT_SUMMARY.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  QUICK_START_TESTING.md  README.md  READY_FOR_TESTING.md  START_HERE.md  SYSTEM_SUMMARY.md  TEST_RESULTS.txt  TEST_RESULTS_SUMMARY.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  WORKFLOW_FIXED.md  agencii.json  agency.py  deployment.sh  main.py  prd.txt  pyproject.toml  requirements.txt  shared_instructions.md  test_workflow.py  validate_json_schemas.py  verify_build.py
agents/: __init__.py
art_direction_agent/: __init__.py  art_direction_agent.py  instructions.md
athar_image_designer/: README.md  __init__.py  agencii.json  deployment.sh  main.py
brief_agent/: __init__.py  brief_agent.py  instructions.md
coding_agent/: __init__.py  coding_agent.py  instructions.md
creator_agent/: __init__.py  creator_agent.py  instructions.md
delivery_agent/: __init__.py  delivery_agent.py  instructions.md
export_agent/: __init__.py  export_agent.py  instructions.md
intake_agent/: __init__.py  instructions.md  intake_agent.py
monitoring/: __init__.py
nb_image_agent/: __init__.py  instructions.md  nb_image_agent.py
orchestrator_agent/: __init__.py  instructions.md  orchestrator_agent.py
qa_agent/: __init__.py  instructions.md  qa_agent.py
reviewer_agent/: __init__.py  instructions.md  reviewer_agent.py
scripts/: check_instructions.sh
shared/: __init__.py  schemas.py  (+1 more)
(+91 files in other folders)
