# only listed properties are used by the system

[project]
name = "athar-image-designer-swarm"
description = "Generate high-quality cinematic Athar-style images using Nano Banana Pro via KIE API"
version = "1.0.0"
license = { text = "MIT" }
keywords = ["agency-swarm", "agencii", "image-generation", "athar", "cinematic", "nano-banana"]

[tool.template]
version = "0.0.2"